CSS and content update

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,14 +37,14 @@
           <li><a href="https://www.instagram.com/louisesgilligan/" className="footer">Instagram</a></li>
           <li><a href="https://github.com/Looease" className="footer">Github</a></li>
         </ul>
-        <ul>
+        {# <ul>
           <a href="/">Portfolio</a>
-          <li><Link to="" className="footer">KBL Solutions</Link></li>
-          <li><Link to=""className="footer">Museum Meltdowm</Link></li>
-          <li><Link to="" className="footer">Resources</Link></li>
-        </ul>
+          <li><a to="" className="footer">KBL Solutions</a></li>
+          <li><a to=""className="footer">Museum Meltdowm</a></li>
+          <li><a to="" className="footer">Resources</a></li>
+        </ul> #}
     </footer>
-
     <!-- Current page: {{ page.url | url }} -->
   </body>
 </html>
+
