--- a/tags.njk
+++ b/tags.njk
@@ -10,6 +10,7 @@ pagination:
     - posts
     - tagList
     - learning
+    - Apprenticeship
   addAllPagesToCollections: true
 layout: layouts/home.njk
 eleventyComputed:
