--- a/_includes/resourcelist.njk
+++ b/_includes/resourcelist.njk
@@ -1,6 +1,6 @@
 <h1>Learning to code</h1>
 
-<p>You can't learn to code is over night. It takes time and lots of repetition. I've listed out all the resources I used to change career as a Software Engineer as well as some tech I've learned along the way</p>
+<p class="text-mobile">You can't learn to code is over night. It takes time and lots of repetition. I've listed out all the resources I used to change career as a Software Engineer as well as some tech I've learned along the way</p>
 
 <ol reversed class="postlist" style="counter-reset: start-from {{ (resourcelistCounter or resourcelist.length) + 1 }}">
 {% for resource in resourcelist | reverse %}
