--- a/css/index.css
+++ b/css/index.css
@@ -414,14 +414,23 @@ a[href].direct-link:focus:visited,
     display: flex;
     flex-direction:column ;
     width: 100%;
-    height: 160vh;
+    height: 95vh;
   }
   .blog-content{
     overflow: auto;
-    height: 60vh;
+    height: 80vh;
+    width: fit-content;
+  }
+  .text-mobile{
+    font-size: 0.75em
+  }
+  .description{
+    margin-bottom: 10px;
+    font-size: 0.75em
   }
   .postlist-item{
-    width: 60%;    
+    display: flex;
+    /* flex-direction: column     */
   }
   .apprentice-section{
   display: flex;
@@ -514,7 +523,7 @@ textarea{
     font-size: 13px;
   }
   .blog-section-container{
-    height: 120vh;
+    height: 110vh;
   }
   .blog-content{
     height: 200vh;
@@ -523,7 +532,11 @@ textarea{
     margin: 10px;
   }
 }
-
+@media screen and (max-width: 615px){
+  .blog-section-container{
+    height: 120vh;
+  }
+};
 @media screen and (max-width: 415px){
   .landingTitle{
     font-size: 1.5em;
@@ -545,7 +558,7 @@ textarea{
     margin: 0px;
     padding: 10px;
     width: 100%;
-    height: 140vh;
+    height: 170vh;
   }
   .blog{
     margin: 10px;
