--- a/css/base.css
+++ b/css/base.css
@@ -88,19 +88,19 @@
   }
   footer ul li {
     margin-top: 10px;
-    margin: 5px;
+    /* margin: 5px; */
     color: white;
     cursor: pointer;
     list-style: none;
     font-size: 0.9em;
   }
-  .companieshouse{
+  /* .companieshouse{
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: auto;
     background-color: #F6C8C8;
-  }
+  } */
   .footer{
     text-decoration: none;
   }
