--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, system-ui, sans-serif;
-  color: var(--darkgray);
+  /* font-family: -apple-system, system-ui, sans-serif;
+  color: var(--darkgray); */
   background-color: var(--white);
 }
 p:last-child {
@@ -82,8 +82,8 @@ code {
 .highlight-line {
   display: block;
   padding: 0.125em 1em;
-  text-decoration: none; 
-  color: inherit;
+  text-decoration: none; /* override del, ins, mark defaults */
+  color: inherit; /* override del, ins, mark defaults */
 }
 
 /* allow highlighting empty lines */
@@ -124,14 +124,12 @@ code {
 .postlist {
   list-style: none;
   padding: 0;
-  display: flex;
-  flex-direction: column;
 }
 .postlist-item {
   margin-bottom: 10px;
-  /* display: flex;
-  flex-wrap: wrap; */
-  /* align-items: baseline; */
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
   counter-increment: start-from -1;
   line-height: 1.8;
 }
@@ -197,6 +195,7 @@ code {
 
 .intro{
   height: 25vh;
+  /* margin-top: 50px; */
   margin-bottom: 50px; 
   font-size: 1.5em;
   display: flex;
@@ -209,6 +208,39 @@ code {
 .blurb{
   max-width: 37em;
 }
+
+/* Squares */
+
+/* .squaresContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+} */
+/* .squaresContainer li{
+  text-decoration: none;
+} */
+/* .square{
+  list-style: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 400px;
+  height: 400px;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  /* background-color: var(--duck);
+} */
+.square img{
+  width: 400px;
+  height: 400px;
+  object-fit: contain;
+  /* filter: grayscale(100%); */
+}
+
+
 /*Blog Section*/
 .blog-section-container{
   padding-left: 15%;
@@ -259,10 +291,6 @@ code {
   text-decoration: none;
   line-height: 1.8;
 }
-.apprenticeship-tag{
-  display: block;
-  width: fit-content;
-}
 a[href].post-tag,
 a[href].post-tag:visited {
   color: inherit;
@@ -297,7 +325,6 @@ a[href].post-tag:focus {
   /* align-items: center; */
   flex-direction: column;
 }
-
 /* Direct Links / Markdown Headers */
 .direct-link {
   font-family: sans-serif;
@@ -321,13 +348,90 @@ a[href].direct-link:focus:visited,
   justify-content: center;
   align-items: center;
 }
+
+
+@media screen and (max-width: 1300px){
+  .blog-section-container{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+    form{
+      width: 100%;
+    }
+    form input{
+      width: 70%;
+      height: 30px;
+    }
+    form textarea{
+      width: 70%;
+      height: 100px;
+    }
+}
+@media screen and (max-width: 975px){
+  .me{
+    width: 250px;
+    height: 250px;
+  }
+  .landingTitle{
+    font-size: 3em;
+    margin: 0px;
+    color: var(--duck);
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  .landingSubTitle{
+    font-size: 2em;
+    margin: 0px;
+    color: var(--duck);
+  }
+  .intro{
+    height: 15vh;
+    margin-bottom: 50px; 
+    font-size: 1em;
+  }
+  .blog-section-container{
+    display: flex;
+    flex-direction:column ;
+    width: 100%;
+    height: 95vh;
+  }
+  .blog-content{
+    overflow: auto;
+    height: 80vh;
+    width: fit-content;
+  }
+  .text-mobile{
+    font-size: 0.75em
+  }
+  .description{
+    margin-bottom: 10px;
+    font-size: 0.75em
+  }
+  .postlist-item{
+    display: flex;
+    /* flex-direction: column     */
+  }
+  .apprentice-section{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.tag-section{
+  display: flex;
+  justify-self: flex-start;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  align-items: baseline;
+}
+};
+
 /*Form*/
 .formContainer{
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
-
 }
 form{
   border: solid 2px black;
@@ -354,86 +458,9 @@ textarea{
   display: flex;
   flex-direction: column;
 }
-@media screen and (max-width: 1300px){
-  .blog-section-container{
-    padding-left: 5%;
-    padding-right: 5%;
-  }
-    form{
-      width: 100%;
-    }
-    form input{
-      width: 70%;
-      height: 30px;
-    }
-    form textarea{
-      width: 70%;
-      height: 100px;
-    }
-}
-@media screen and (max-width: 975px)
-{
-  .me{
-    width: 250px;
-    height: 250px;
-  }
-  .landingTitle{
-    font-size: 3em;
-    margin: 0px;
-    color: var(--duck);
-    text-transform: uppercase;
-    font-weight: 600;
-  }
-  .landingSubTitle{
-    font-size: 2em;
-    margin: 0px;
-    color: var(--duck);
-  }
-  .intro{
-    height: 15vh;
-    margin-bottom: 50px; 
-    font-size: 1em;
-  }
-  .blog-section-container{
-    display: flex;
-    flex-direction:column;
-    width: 100%;
-    height: 95vh;
-  }
-  .blog-content{
-    height: 80vh;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: fit-content;
-    overflow: hidden
-  }
-  .text-mobile{
-    font-size: 0.75em
-  }
-  .description{
-    margin-bottom: 10px;
-    font-size: 0.75em
-  }
-  .postlist-item{
-    display: flex;
-    flex-direction: column    
-  }
-  .apprentice-section{
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
-}
-/* .tag-section{
-  display: flex;
-  justify-self: flex-start;
-  flex-direction: column;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  align-items: baseline;
-}   */
-};
 
-@media screen and (max-width: 800px){
+
+@media screen and (max-width: 700px){
   .me{
     width: 175px;
     height: 175px;
@@ -441,20 +468,18 @@ textarea{
   }
   .landingTitle{
     font-size: 1.4em;
-    color: var(--duck);
     text-transform: uppercase;
   }
   .landingSubTitle{
     font-size: 1em;
     margin-bottom: 10px;
-    color: var(--duck);
   }
   .blurb{
     font-size: 13px;
   }
-  /* .blog-section-container{
-    height: 120vh;
-  } */
+  .blog-section-container{
+    height: 110vh;
+  }
   .blog-content{
     height: 200vh;
   }
@@ -462,12 +487,15 @@ textarea{
     margin: 10px;
   }
 }
-@media screen and (max-width: 630px){
+@media screen and (max-width: 615px){
   .blog-section-container{
     height: 115vh;
   }
+  .tmpl-home .postlist-link{
+  font-size: 1em;
+}
 };
-@media screen and (max-width: 500px){
+@media screen and (max-width: 415px){
   .landingTitle{
     font-size: 1.5em;
   }
@@ -483,12 +511,12 @@ textarea{
     font-size: 0.75em;
   }
   .blog-section-container{
-    /* display: flex;
+    display: flex;
     flex-direction:column;
     margin: 0px;
     padding: 10px;
-    width: 100%; */
-    height: 180vh;
+    width: 100%;
+    height: 190vh;
   }
   .blog{
     margin: 10px;
