--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -32,7 +32,7 @@
     <footer>
        <ul>
           <a href="/">Louise Gilligan</a>
-          <li><a href="contact.html" className="footer">Contact</a></li>
+          <li><a href="/contact/" className="footer">Contact</a></li>
           <li><a href="https://www.linkedin.com/in/louise-gilligan-3b437069/" className="footer">Linkedin</a></li>
           <li><a href="https://www.instagram.com/louisesgilligan/" className="footer">Instagram</a></li>
           <li><a href="https://github.com/Looease" className="footer">Github</a></li>
