--- a/css/base.css
+++ b/css/base.css
@@ -58,21 +58,19 @@
   }
   
   footer{
-    margin: 0px;
-    padding: 0px;
     background-color: var(--duck);
     width: 100%;
-    height: 30vh;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     text-align: center;
-   overflow: hidden;
   }
   footer ul{
     font-size: 1.3em;
     outline: none;
+    margin-right: 70px;
     color: white;
     text-transform: uppercase;
     text-decoration: none;
@@ -88,19 +86,11 @@
   }
   footer ul li {
     margin-top: 10px;
-    /* margin: 5px; */
     color: white;
     cursor: pointer;
     list-style: none;
     font-size: 0.9em;
   }
-  /* .companieshouse{
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: auto;
-    background-color: #F6C8C8;
-  } */
   .footer{
     text-decoration: none;
   }
