--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,7 +1,7 @@
 
 <h1>BCS Software Engineering Level 4 Apprenticeship</h1>
 
-<p>My experience of the BCS Software Engineering Level 4 Apprenticeship with some hints and tips I've picked up along the way . </p>
+<p class="text-mobile">My experience of the BCS Software Engineering Level 4 Apprenticeship with some hints and tips I've picked up along the way . </p>
 
 <ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
 {% for post in postslist | reverse %}
