--- a/_includes/resourcelist.njk
+++ b/_includes/resourcelist.njk
@@ -1,8 +1,8 @@
 <h1>Learning to code</h1>
 
-<p class="text-mobile">You can't learn to code is over night. It takes time and lots of repetition. I've listed out all the resources I used to change career as a Software Engineer as well as some tech I've learned along the way</p>
+<p class="text-mobile">You can't learn to code is over night. It takes time and lots of repetition. In this section, I've listed out all the resources I used to learn to code as well as some tips I've learned along the way</p>
 
-  <p>More posts can be found in <a href="{{ '/resources/' | url }}">the resources section</a>.</p>
+  <p>More posts can be found in <a href="{{ '/resource/' | url }}">the resources section</a>.</p>
 
 
 <ol reversed class="postlist" style="counter-reset: start-from {{ (resourcelistCounter or resourcelist.length) + 1 }}">
