--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,9 @@ p:last-child {
 }
 p,
 .tmpl-post li,
+/* img {
+  max-width: 37em; /* 600px /16 
+} */
 p,
 .tmpl-post li {
   line-height: 1.45;
@@ -83,6 +86,7 @@ code {
   text-decoration: none; /* override del, ins, mark defaults */
   color: inherit; /* override del, ins, mark defaults */
 }
+
 /* Header */
 .home {
   padding: 0 1rem;
@@ -253,6 +257,7 @@ a[href].post-tag:focus {
 .warning ol:only-child {
   margin: 0;
 }
+
 /*Markdown*/
 .posts{
   height: 100%;
@@ -287,46 +292,24 @@ a[href].direct-link:focus:visited,
   justify-content: center;
   align-items: center;
 }
-/*Form*/
-.formContainer{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-}
-form{
-  border: solid 2px black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 33%;
-  border-radius: 30px;
-}
-form input{
-  width: 40vh;
-  height: 30px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-}
-textarea{
-  padding: 0px;
-  width: 40vh;
-  margin-bottom: 10px;
-  height: 100px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-}
+
+
 @media screen and (max-width: 1300px){
   .blog-section-container{
     padding-left: 5%;
     padding-right: 5%;
   }
-.form{
-  width: 90%;
-}
+    form{
+      width: 100%;
+    }
+    form input{
+      width: 70%;
+      height: 30px;
+    }
+    form textarea{
+      width: 70%;
+      height: 100px;
+    }
 }
 @media screen and (max-width: 975px){
   .me{
@@ -385,6 +368,39 @@ textarea{
   align-items: baseline;
 }
 };
+
+/*Form*/
+.formContainer{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+form{
+  border: solid 2px black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 33%;
+  border-radius: 30px;
+}
+form input{
+  width: 40vh;
+  height: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+textarea{
+  padding: 0px;
+  width: 40vh;
+  margin-bottom: 10px;
+  height: 100px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
 @media screen and (max-width: 800px){
   .me{
     width: 175px;
@@ -420,7 +436,9 @@ textarea{
   font-size: 1em;
 }
 form{
-  padding: 10px;
+  padding: 5px;
+  text-align: center;
+  width: 100%;
 }
 form input{
   width: 25vh;
