--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F5D57FGLV"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1F5D57FGLV');
+    </script>
   </head>
   <body>
     <header>
